--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -19,7 +19,10 @@ exec-once = waybar & dunst & /usr/lib/polkit-kde-authentication-agent-1 & wl-pas
 exec-once = rm -f /home/atikinbtw/.var/app/com.jetbrains.IntelliJ-IDEA-Community/config/JetBrains/IdeaIC2024.1/.lock
 
 # Start video wallpaper
-exec-once = /home/atikinbtw/Documents/mpv/build/mpv ~/Downloads/videoplayback.webm --loop
+#exec-once = hyprpm reload | cp ~/.config/hypr/hyprland.conf ~/.config/hypr/hyprland.conf.hack | rm -f ~/.config/hypr/hyprland.conf.hack | mpv --wayland-app-id="mpvbg" ~/Downloads/videoplayback.webm --loop
+
+exec-once = ~/.config/hypr/runwallpaper.sh &
+
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
@@ -54,12 +57,12 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
-# plugin {
-#     hyprwinwrap {
-#         # class is an EXACT match and NOT a regex!
-#         class = mpvbg
-#     }
-# }
+plugin {
+    hyprwinwrap {
+        # class is an EXACT match and NOT a regex!
+        class = mpvbg
+    }
+}
 
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
