--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -27,12 +27,12 @@ x = 1
 y = 1
 
 [scrolling]
-history = 50000
+history = 100000
 
 [window]
-title = "buhbuhbuh"
+title = "i'm @ you're @"
 opacity = 0.6
-startup_mode = "Maximized"
+padding = { x = 0, y = 0 }
 
 [env]
 TERM = "xterm-256color"
@@ -40,14 +40,3 @@ TERM = "xterm-256color"
 [window.class]
 general = "Alacritty"
 instance = "Alacritty"
-
-[keyboard]
-bindings = [
-#  { key = "C", mods = "Control", action = "Copy" },
-#  { key = "V", mods = "Control", action = "Paste" },
-  { key = "T", mods = "Control|Shift", action = 'SpawnNewInstance' }
-]
-
-[window.padding]
-x = 5
-y = 5
