--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -1,34 +1,24 @@
 {
     "layer": "top",
-    "position": "top",
-    "mod": "dock",
+    "position": "bottom",
+    "mode": "hide",
     "exclusive": true,
     "passthrough": false,
     "gtk-layer-shell": true,
-    "height": 0,
-    "modules-left": [
-        "custom/emergency",
-        "clock",
-        "custom/gpu_temperature",
-        "custom/cpu_temperature",
-        "mpris",
-        "privacy"
-    ],
-    "modules-center": ["hyprland/window"],
-    "modules-right": [
+    "autohide": true,
+    "autohide-delay": 250,
+    "height": 0, 
+    "width": 10,
+    "modules-center": [
         "hyprland/workspaces",
         "tray",
         "pulseaudio",
-        "hyprland/language",
-        "network"
+        "mpris"
     ],
-    "hyprland/window": {
-        "format": "{title}"
-    },
     "hyprland/workspaces": {
         "all-outputs": true,
         "format": "{icon}",
-        "tooltip": true,
+        "tooltip": false,
         "persistent-workspaces": {
             "*": 9
         },
@@ -44,41 +34,14 @@
           "9": " "
         }
     },
-    "privacy": {
-	    "icon-spacing": 5,
-	    "icon-size": 16,
-	    "transition-duration": 365,
-	    "modules": [
-		    {
-			    "type": "screenshare",
-		      "tooltip": true,
-		      "tooltip-icon-size": 26
-	      },
-      	{
-	      	"type": "audio-in",
-	      	"tooltip": true,
-      		"tooltip-icon-size": 26
-      	}
-      ]
-    },
-    "custom/cpu_temperature": {
-        "interval": 5,
-        "exec": "sensors -j coretemp-isa-0000 | jq '.\"coretemp-isa-0000\".\"Package id 0\".\"temp1_input\"' | awk '{print int($1)}'",
-        "format": "  {} °C",
-        "tooltip": false
-    },
-    "custom/gpu_temperature": {
-        "interval": 5,
-        "exec": "sensors -j amdgpu-pci-0100 | jq '.\"amdgpu-pci-0100\".\"edge\".\"temp1_input\"' | awk '{print int($1)}'",
-        "format": "󰢮  {} °C",
-        "tooltip": false
-    },
     "tray": {
         "icon-size": 20,
+        "tooltip": false,
         "spacing": 10
     },
     "mpris": {
 	    "format": "{status_icon} {player_icon}",
+      "tooltip": false,
 	    "player-icons": {
 	    	"default": "▶",
 	    	"mpv": " ",
@@ -91,26 +54,9 @@
         "stopped": "<span foreground='red'>󰓛 </span>"
     	}
     },
-    "clock": {
-        "format": "{:%A  %T   %d/%m}",
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "interval": 1
-    },
-    "hyprland/language": {
-       "format": "{short}"
-    },
-    "network": {
-      "format": "{ifname}",
-      "format-wifi": "{essid} ({signalStrength}%)  ",
-      "format-ethernet": "{ifname} 󰈀 ",
-      "format-disconnected": "", // hide the module
-      "tooltip-format": "{ifname} via {gwaddr} 󰈀 ",
-      "tooltip-format-wifi": "{essid} ({signalStrength}%)  ",
-      "tooltip-format-ethernet": "{ifname}  ",
-      "on-click-right": "alacritty -e nmtui"
-    },
     "pulseaudio": {
         "format": "{icon} {volume}%",
+        "tooltip": false,
         "format-muted": " Muted",
         "on-click": "wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle",
         "on-click-right": "pavucontrol",
@@ -124,10 +70,5 @@
             "car": "",
             "default": ["", "", ""]
         }
-    },
-    "custom/emergency": {
-      "on-click-right": "alacritty",
-      "format": " ",
-      "tooltip": false
     }
 }
