--- a/hypr/hyprlandd.conf
+++ b/hypr/hyprlandd.conf
@@ -8,23 +8,22 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+# monitor=,preferred,auto,auto
+monitor=WAYLAND-1,941x1056@60,0x0,1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & dunst & /usr/lib/polkit-kde-authentication-agent-1 & wl-paste --watch cliphist store -max-items 1000
-
-# Fix JetBrains .lock
-exec-once = rm -f /home/atikinbtw/.var/app/com.jetbrains.IntelliJ-IDEA-Community/config/JetBrains/IdeaIC2024.2/.lock
-exec-once = rm -f /home/atikinbtw/.var/app/com.jetbrains.CLion/config/JetBrains/CLion2023.3/.lock
+# exec-once = waybar & dunst & /usr/lib/polkit-kde-authentication-agent-1 & wl-paste --watch cliphist store -max-items 1000
+#
+# Fix IntelliJ-IDEA-Community .lock
+# exec-once = rm -f /home/atikinbtw/.var/app/com.jetbrains.IntelliJ-IDEA-Community/config/JetBrains/IdeaIC2024.1/.lock
+# exec-once = rm -f /home/atikinbtw/.var/app/com.jetbrains.CLion/config/JetBrains/CLion2023.3/.lock
 
 # Start video wallpaper
-# exec-once = hyprpm reload && ~/.config/hypr/selectwallpaper.sh
-# exec-once = hyprpm enable hyprwinwrap && mpv --wayland-app-id="mpvbg" ~/.config/hypr/videowallpapers/wallpaper1.mp4 --loop --no-audio
-exec-once = hyprpm reload && sleep 1 && mpv --wayland-app-id="mpvbg" ~/.config/hypr/videowallpapers/wallpaper1.mp4 --loop --no-audio
+#exec-once = hyprpm reload | cp ~/.config/hypr/hyprland.conf ~/.config/hypr/hyprland.conf.hack | rm -f ~/.config/hypr/hyprland.conf.hack | mpv --wayland-app-id="mpvbg" ~/Downloads/videoplayback.webm --loop
 
-exec-once = hyprpaper
+# exec-once = ~/.config/hypr/runwallpaper.sh &
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -76,8 +75,6 @@ general {
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
-
-    allow_tearing = true;
 }
 
 decoration {
@@ -135,10 +132,9 @@ misc {
     force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
 }
 
-# debug {
-    # enable_stdout_logs = true
-    # disable_logs = false
-# }
+debug {
+    enable_stdout_logs = true
+}
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
@@ -147,22 +143,18 @@ misc {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrule = workspace 6, title:Minecraft*
-windowrulev2 = immediate, class:Minecraft*
 windowrule = tile, title:Minecraft*
-# windowrule = float, title:Dolphin
+windowrule = float, title:Dolphin
 windowrule = float, title:KCalc
-# windowrule = noblur,^(Alacritty)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = SUPER
+$mainMod = ALT
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod SHIFT, Q, exec, [float] $terminal
 bind = $mainMod, S, killactive,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, K, exec, hyprctl kill
-bind = $mainMod SHIFT, E, exec, [float] $fileManager
 bind = $mainMod, F, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, M, exit,
