--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -13,7 +13,7 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & dunst & /usr/lib/polkit-kde-authentication-agent-1 & wl-paste --watch cliphist store -max-items 1000
+exec-once = waybar & swaync & /usr/lib/polkit-kde-authentication-agent-1 & wl-paste --watch cliphist store -max-items 1000
 
 # Fix JetBrains .lock
 exec-once = rm -f /home/atikinbtw/.var/app/com.jetbrains.IntelliJ-IDEA-Community/config/JetBrains/IdeaIC2024.2/.lock
@@ -23,8 +23,6 @@ exec-once = rm -f /home/atikinbtw/.var/app/com.jetbrains.CLion/config/JetBrains/
 # exec-once = hyprpm reload && ~/.config/hypr/selectwallpaper.sh
 # exec-once = hyprpm enable hyprwinwrap && mpv --wayland-app-id="mpvbg" ~/.config/hypr/videowallpapers/wallpaper1.mp4 --loop --no-audio
 exec-once = hyprpm reload && sleep 1 && mpv --wayland-app-id="mpvbg" ~/.config/hypr/videowallpapers/wallpaper1.mp4 --loop --no-audio
-
-exec-once = hyprpaper
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -40,6 +38,9 @@ env = QT_QPA_PLATFORMTHEME,qt6ct # change to qt6ct if you have that
 env = HYPRCURSOR_THEME,HyprBibataModernClassic
 env = HYPRCURSOR_SIZE,26
 env = XCURSOR_THEME,XBibataModernClassic
+
+# File association in dolphin.
+env = XDG_MENU_PREFIX,plasma-
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -69,11 +70,13 @@ plugin {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 5
-    gaps_out = 10
-    border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    gaps_in = 4
+    gaps_out = 12
+
+    col.active_border = rgb(00a7f5) rgb(538620)
+    col.inactive_border = rgb(00a7f5) rgb(538620)
+
+    border_size = 0
 
     layout = dwindle
 
@@ -82,36 +85,41 @@ general {
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
+    rounding = 7
 
-    rounding = 10
+    drop_shadow = true
+    shadow_range = 2
+    col.shadow = rgba(15, 15, 15, 1)
 
+    # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
         size = 3
-        passes = 1
-        
-        vibrancy = 0.1696
-    }
+        passes = 2
 
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+        noise = 0.01
+    }
 }
 
 animations {
     enabled = true
-
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    bezier = fluent_decel, 0, 0.2, 0.4, 1
+    bezier = easeOutCirc, 0, 0.55, 0.45, 1
+    bezier = easeOutCubic, 0.33, 1, 0.68, 1
+    bezier = easeinoutsine, 0.37, 0, 0.63, 1
+    # Windows
+    animation = windowsIn, 1, 3, easeOutCubic, popin 30% # window open
+    animation = windowsOut, 1, 3, fluent_decel, popin 70% # window close.
+    animation = windowsMove, 1, 2, easeinoutsine, slide # everything in between, moving, dragging, resizing.
+    # Fade
+    animation = fadeIn, 1, 3, easeOutCubic  # fade in (open) -> layers and windows
+    animation = fadeOut, 1, 1.7, easeOutCubic # fade out (close) -> layers and windows
+    animation = fadeSwitch, 0, 1, easeOutCirc # fade on changing activewindow and its opacity
+    animation = fadeShadow, 1, 10, easeOutCirc # fade on changing activewindow for shadows
+    animation = fadeDim, 1, 4, fluent_decel # the easing of the dimming of inactive windows
+    animation = border, 1, 2.7, easeOutCirc # for animating the border's color switch speed
+    animation = borderangle, 1, 30, fluent_decel, once # for animating the border's gradient angle - styles: once (default), loop
+    animation = workspaces, 1, 3, easeOutCubic, slide # styles: slide, slidevert, fade, slidefade, slidefadevert
 }
 
 dwindle {
@@ -168,7 +176,7 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, M, exit,
 # bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, W, exec, /opt/firefox/firefox-bin
+bind = $mainMod, W, exec, /opt/firefox-nightly/firefox
 bind = $mainMod, I, exec, com.jetbrains.IntelliJ-IDEA-Community
 
 # Screenshot
