--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,5 +1,5 @@
 import = [
-  "./catpuccin-mocha.toml"
+  "~/.config/alacritty/nord.toml"
 ]
 shell = "/bin/zsh"
 
@@ -31,7 +31,7 @@ history = 100000
 
 [window]
 title = "i'm @ you're @"
-opacity = 0.6
+opacity = 0.9
 padding = { x = 0, y = 0 }
 
 [env]
