--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -187,6 +187,7 @@ bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 
 # Screen locking
 bind = $mainMod, L, exec, hyprlock
+bind = $mainMod SHIFT, L, exec, systemctl suspend && hyprlock
 
 # Media
 binde = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SINK@ 5%+
