--- a/.gitconfig
+++ b/.gitconfig
@@ -1,36 +1,13 @@
 [user]
-	name = atikinbtw
-  email = robinmusy12@gmail.com
-
-[core]
-  autocrlf = input
-
-[credential]
-	helper = /usr/local/bin/git-credential-manager
-  credentialStore = cache
-
-[credential "https://dev.azure.com"]
-  useHttpPath = true
-
+	email = robinmusy12@gmail.com
+	name = atikiNBTW
 [push]
-  autoSetupRemote = true
-
-[core]
-  pager = delta
-
-[interactive]
-  diffFilter = delta --color-only
-
-[delta]
-  navigate = true
-
-[merge]
-  conflictstyle = diff3
-
-[diff]
-  colorMoved = default
-[filter "lfs"]
-	clean = git-lfs clean -- %f
-	smudge = git-lfs smudge -- %f
-	process = git-lfs filter-process
-	required = true
+	autoSetupRemote = true
+[credential]
+	helper = 
+	helper = /usr/local/bin/git-credential-manager
+	credentialStore = secretservice
+[credential "https://dev.azure.com"]
+	useHttpPath = true
+[pull]
+	rebase = true
