--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,8 +1,3 @@
-import = [
-  "~/.config/alacritty/nord.toml"
-]
-shell = "/bin/zsh"
-
 [font]
 size = 14.0
 
@@ -36,6 +31,14 @@ padding = { x = 0, y = 0 }
 
 [env]
 TERM = "xterm-256color"
+
+[general]
+import = [
+  "~/.config/alacritty/nord.toml"
+]
+
+[terminal]
+shell = "/bin/zsh"
 
 [window.class]
 general = "Alacritty"
